[tool.poetry]
name = "py_env_template"
version = "0.0.0"
description = ""
authors = ["Deize <ddeize.git@gmail.com>"]
readme = "README.md"
packages = [{include = "", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
isort = "^6.0.1"
black = "^25.1.0"
ipykernel = "^6.27.1"
flake8 = "^7.1.2"
pytest = "^8.0.1"
pandas = "^2.2.0"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203, W502, W503"
exclude = ".venv"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true

[tool.poetry-dynamic-versioning]
enable = true
format = "{base}"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)$"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.2.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]
addopts = [
    "--import-mode=importlib",
]
